fix spacing of menu items in sidebar

--- a/themes/vue/source/css/_sidebar.styl
+++ b/themes/vue/source/css/_sidebar.styl
@@ -21,7 +21,7 @@
         line-height 1.5em
         padding-left 1em
     li
-        margin-bottom 0.5em
+        margin-top .5em
     .version-select
         vertical-align middle
         margin-left 5px
